# Fishix

./: Makefile  README.md
distro-files/: makeiso.sh
distro-files/root/: .xinitrc
docs/: README.md
docs/dma/: README.md
docs/drm/: README.md
docs/wayland/: README.md
kernel/: meson.build
kernel/src/: cat.sh  kernel.hpp  linux_types.hpp
kernel/src/cpu/: cpu.cpp  cpu.hpp
kernel/src/cpu/syscall/: syscall.cpp  syscall.hpp  syscalls.inc
kernel/src/dev/: block.cpp  net.cpp  pci.cpp  pci.hpp  virtio.cpp  virtio.hpp  xhci.cpp  xhci.hpp
kernel/src/dev/input/: input.cpp  input.hpp  usb_to_linux_keycodes.inc  usbhid.cpp  usbhid.hpp
kernel/src/dev/input/ps2/: ps2.cpp
kernel/src/dev/tty/: console.cpp  pty.cpp
kernel/src/drivers/drm/: drm_core.cpp  drm_fops.cpp  drm_gem.cpp  drm_internal.hpp  drm_modeset.cpp  fishix_drm.cpp  fishix_drm.hpp
kernel/src/fs/: procfs.cpp  tmpfs.cpp  vfs.cpp  vfs.hpp
kernel/src/include/klib/: common.hpp  list.hpp  poll.hpp
kernel/src/include/uapi/drm/: drm.h
kernel/src/include/uapi/linux/: dma-buf.h
kernel/src/klib/: common.hpp  cppruntime.cpp  cstring.cpp  cstring.hpp  ioctl.hpp  list.hpp  timespec.hpp  userptr.hpp  vector.hpp
kernel/src/mem/: dma.cpp  dma.hpp  pmm.cpp  pmm.hpp  vmm.cpp  vmm.hpp
kernel/src/sched/: sched.cpp  sched.hpp  time.cpp  time.hpp
kernel/src/uapi/linux/: dma-buf.h  input.h
kernel/src/userland/: elf.cpp  info.cpp  inotify.cpp  inotify.hpp  memfd.cpp  memfd.hpp  signal.cpp  signal.hpp  signalfd.cpp  signalfd.hpp
kernel/src/userland/socket/: tcp.hpp
kernel/src/userland/socket/local/: stream.cpp  stream.hpp
